@@ -1,3 +1,11 @@
+Changelog 19. Nov 2018.
+	-Fixed a bug in assembler where it would crash if you typed in 0x or 0b only as an argument
+	-Added labels to the assembler
+	-Added option to use labels as 16 bit arguments
+	-Made it so comments can be typed anywhere, even after instructions
+	-Added some more detailed error messages to the assembler
+	-Added colours to assembler output messages
+
 Changelog 18. Nov 2018.
 	-Added undeflow flag to the CPU and a jump instruction for it
 	-Added options to print as unsigned or signed integers to console
